[project]
name = "hermes2"
version = "0.1.0"
description = "Bloom's-faithful question generation: distractor-first + 8-gate validation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "mcdanielmjustin"}]
license = {text = "MIT"}
dependencies = ["anthropic>=0.40.0", "pydantic>=2.0.0", "rich>=13.0.0", "pytest>=7.0.0", "tqdm>=4.65.0"]

[project.optional-dependencies]
dev = ["black>=23.0.0", "ruff>=0.1.0", "mypy>=1.0.0"]

[project.scripts]
hermes = "hermes.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true

